# definitive-guide-to-aws-application-integration

c01_getting_started/javascript-sources/chapter-1/demo-01/: insert-record-dynamodb.html
c06_relational_data_service/: Dockerfile  pyproject.toml
c06_relational_data_service/infra/: main.tf
c06_relational_data_service/input/: small.parquet
c06_relational_data_service/restore_rds_from_snapshot/: parquet_to_rds.py  test_parquet_to_rds.py
javascript-sources/chapter-1/demo-01/: insert-record-dynamodb.html
